# plaintext-gtd-rust

./: .gitignore  Cargo.toml  shell.nix
src/: main.rs  store.rs  task.rs  terminal.rs  tui.rs  uuid.rs
