[package]
name = "plaintext-gtd-rust"
version = "0.1.0"
authors = ["David Strauß <david.strauss@edgycircle.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1"
uuid = { version = "0.8", features = ["v4"] }